# rawbench

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
examples/evaluations/: complex-criteria.yaml  format-tests.yaml  multi-model-comparison.yaml  multi-model-multi-prompt.yaml  recursive-tool-test.yaml  simple-tool-test.yaml  tool-mock-example.yaml  variable-function-example.yaml  variable-usage.yaml
rawbench/: __init__.py  _version.py
rawbench/cli/: __init__.py  main.py
rawbench/config/: __init__.py  loader.py
rawbench/core/: __init__.py  evaluation.py  model.py  tool_execution.py  variables.py
rawbench/frontend/: Makefile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
rawbench/frontend/src/: App.tsx  globals.css  main.tsx
rawbench/frontend/src/api/: results.ts
rawbench/frontend/src/components/: EvalResultsViewer.tsx  EvaluationDetail.tsx  EvaluationsList.tsx  JsonModal.tsx  TestCaseCard.tsx
rawbench/frontend/src/components/ui/: toast.tsx
rawbench/frontend/static/: index.html
rawbench/frontend/static/assets/: index-BLhlwAfU.css  index-ywbNbL42.js  index-ywbNbL42.js.map
rawbench/results/: __init__.py  html_export.py  result.py
rawbench/results/html/: html_export.py  template.html
rawbench/services/: evaluation.py  server.py  setup.py
rawbench/utils/: __init__.py  credentials.py
variables/: current_datetime.py
